results/SVCOMP/conversational/log-InfiniteLoop-2024_03_13_10_29_53.txt
import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; b == false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; b == false);
                                                                 ^
  symbol:   variable b
  location: class InfiniteLoop
1 error

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; b == false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; b == false);
                                                                 ^
  symbol:   variable b
  location: class InfiniteLoop
1 error

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; !b);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: error: cannot find symbol
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; !b);
                                                                  ^
  symbol:   variable b
  location: class InfiniteLoop
1 error

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5:) in method infiniteLoop
    public static void infiniteLoop(String[] arg) {
                       ^
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6:
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
        ^
2 verification failures

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5:) in method infiniteLoop
    public static void infiniteLoop(String[] arg) {
                       ^
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6:
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
        ^
2 verification failures

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5:) in method infiniteLoop
    public static void infiniteLoop(String[] arg) {
                       ^
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6:
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
        ^
2 verification failures

import java.util.Random;

public class InfiniteLoop {

    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i;
        while (b) {
            i++;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5:) in method infiniteLoop
    public static void infiniteLoop(String[] arg) {
                       ^
/home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/InfiniteLoop.java:6:
    //@ ensures (\forall int i; 0 <= i && i < Integer.MAX_VALUE; false);
        ^
2 verification failures

import java.util.Random;

public class InfiniteLoop {

    //@ ensures true; // As the loop is infinite, it cannot be guaranteed to terminate
    public static void infiniteLoop(String[] arg) {
        int i = 0;
        boolean b = new Random().nextBoolean();

        //@ maintaining b == true || b == false;
        //@ decreases Integer.MAX_VALUE - i; // This is a placeholder for the loop variant
        while (b) {
            i++;
        }
    }
}

